Refactoring: created separate BaseTest classes, fixed flaky UI test etc.